<?xml version="1.0" encoding="utf-8"?>

<!-- layout della camera -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/innerRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_backToMenu"
            android:text="@string/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/capturebutton"/>
        <Button
            android:id="@+id/button_capture"
            android:text="@string/button_capture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/capturebutton"/>
        <Button
            android:id="@+id/button_switch"
            android:text="@string/button_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/capturebutton"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/innerRelativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imgGeoTag"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/innerRelativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/compass_camera"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/pointer2" />

    </LinearLayout>
</RelativeLayout>
